# Copyright (c) 2024, Trail of Bits, Inc.
#
# This source code is licensed in accordance with the terms specified in the
# LICENSE file found in the root directory of this source tree.

add_subdirectory(pcode-translate)
add_subdirectory(pcode-lifter)
add_subdirectory(patchir-cir2llvm)
add_subdirectory(patchir-opt)
