# Copyright (c) 2024, Trail of Bits, Inc.
#
# This source code is licensed in accordance with the terms specified in the
# LICENSE file found in the root directory of this source tree.

add_subdirectory(AST)
add_subdirectory(Codegen)
add_subdirectory(Dialect)
add_subdirectory(Ghidra)
add_subdirectory(Passes)
